ZvIt iS CUUUming 2.0

--- a/zvit/index.html
+++ b/zvit/index.html
@@ -48,7 +48,17 @@
         </div>
     </header>
     <section class="main">
-        
+        <div class="vertical">
+            <ul class="list">
+                <li><div class="vertical_area"></div></li>
+                <li><div class="vertical_area"></div></li>
+                <li><div class="vertical_area"></div></li>
+                <li><div class="vertical_area"></div></li>
+                <li><div class="vertical_area"></div></li>
+                <li><div class="vertical_area"></div></li>
+                <li><div class="vertical_area"></div></li>
+            </ul>
+        </div>
     </section>
 
 
