main title and field description. v2

--- a/project_LW1/desc.html
+++ b/project_LW1/desc.html
@@ -8,16 +8,19 @@
     <link rel="stylesheet" href="CSS/styleDesc.css">
 </head>
 <body>
-    <h1>Бригада №6</h1>
     <div id="we">
-        <span class="authors">Мороз Владислав <br> Піщук Максим <br> Терещенко Богдан</span>
+        <h1>Бригада №6</h1>
+        <hr>
+        <span class="authors">Мороз Владислав  Піщук Максим  Терещенко Богдан</span>
     </div>
-    <h2>
-        Опис предметної області
-    </h2>
-	<span class="strong">Предметна галузь :</span> сайт з музичними композиціями.<br>   
-    <h3>Функціонал: </h3>
+    
     <div class="description">
+        <h2>
+            Опис предметної області
+        </h2>
+        <span class="strong underline">Предметна галузь :</span> сайт з музичними композиціями.<br>   
+    <h3>Функціонал: </h3>
+
         <ol type="1">
             <li>При вході на сайт у користувача запитуватимуться його вподобання, за результатом відповіді підберуться початкові рекомендації.</li>
             <li>Реєстрація/авторизація (користувач може також бути незареєстрованим, але тоді у нього не буде можливості коментувати пости та брати участь в обговоренні на формі).</li>
@@ -27,6 +30,6 @@
             <li>ПРАВИЛА користування будуть можливі для перегляду кожному користувачеві та розміщені на на окремій сторінці, а також при реєстрації.</li>
         </ol>
     </div>
-    <a href="index.html">Повернутися на головну</a>
+    <a href="index.html"><img width="100" src="img/backarrow.png" alt="Back"></a>
 </body>
 </html>
