--- a/zvit/index.html
+++ b/zvit/index.html
@@ -47,18 +47,20 @@
             <button class="lab_button">Лабораторна робота №9</button>    
         </div>
     </header>
+
     <section class="main">
         <div class="vertical">
             <ul class="list">
-                <li><div class="vertical_area"></div></li>
-                <li><div class="vertical_area"></div></li>
-                <li><div class="vertical_area"></div></li>
-                <li><div class="vertical_area"></div></li>
-                <li><div class="vertical_area"></div></li>
-                <li><div class="vertical_area"></div></li>
-                <li><div class="vertical_area"></div></li>
+                <li><div class="vertical_area">Опис предметного середовища</div></li>
+                <li><div class="vertical_area">Тема Мета Місце розташування лаби</div></li>
+                <li><div class="vertical_area">Структура документа</div></li>
+                <li><div class="vertical_area">HTML-код таблиць</div></li>
+                <li><div class="vertical_area">HTML-код форми</div></li>
+                <li><div class="vertical_area">HTML-код зображення</div></li>
+                <li><div class="vertical_area">Висновки</div></li>
             </ul>
         </div>
+
     </section>
 
 
