zvit 1 lab : full

--- a/zvit/cons.html
+++ b/zvit/cons.html
@@ -64,7 +64,22 @@
         </div>
 
         <div class="main_area">
-
+            <div style="
+            display: inline-block;
+            background-color: rgb(224, 146, 255);
+            border: 3px solid black;
+            text-align: center;
+            padding: 10px;
+            position: relative;">
+            <h1 style="text-decoration: underline; font-size: 30px;">ВИСНОВКИ:</h1>
+            <p style="font-size: 25px;">Ми придбали практичні навички роботи з HTML-документами, різноманітними
+                тегами, атрибутами, а також формами, таблицями, зображеннями,
+                посиланнями. Поміж цього навчились працювати в команді, систематично
+                контролювати версії написаного коду за допомогою Github.
+                <br><br>Також ми створили шаблон звітного HTML-документа для відображення 
+                результатів роботи всіх лабораторних робіт. 
+            </p>
+            </div>
         </div>
 
     </section>
