--- a/zvit/table.html
+++ b/zvit/table.html
@@ -64,7 +64,16 @@
         </div>
 
         <div class="main_area">
-
+            <div style="
+            display: inline-block;
+            background-color: rgb(224, 146, 255);
+            border: 3px solid black;
+            text-align: left;
+            padding: 10px;
+            ">
+                <img src="img/table_code.png" alt="N O I M A G E" style="width: 425px; height: 500px;">
+                <img src="img/table_css.png" alt="N O I M A G E" style="width: 425px; height: 400px;">
+            </div>
         </div>
 
     </section>
