--- a/zvit/descr.html
+++ b/zvit/descr.html
@@ -64,7 +64,25 @@
         </div>
 
         <div class="main_area">
-
+            <div class="description" style="
+            background-color: rgb(224, 146, 255);
+            border: 3px solid black;
+            ">
+                <h2>
+                    Опис предметної області
+                </h2>
+                <b>Предметна галузь</b> : сайт з музичними композиціями.<br>   
+                <h3>Функціонал: </h3>
+        
+                <ol type="1" style="font-size: 18px;">
+                    <li>При вході на сайт у користувача запитуватимуться його вподобання, за результатом відповіді підберуться початкові рекомендації.</li>
+                    <li>Реєстрація/авторизація (користувач може також бути незареєстрованим, але тоді у нього не буде можливості коментувати пости та брати участь в обговоренні на формі).</li>
+                    <li>Пісні на сайті : у кожної пісні буде аудіодріжка, інформація про автора, рік випуску та короткий опис. Також буде присутній текст. Можливість переглянути кліп або концерт.</li>
+                    <li>Буде три типи користувачів : гість, зареєстрований звичайний користувач та адмін. Принципова різниця між гостем та звичайним юзером у тому, що перший не матиме можливості переглядати відеоматеріал, бачити текст пісні. Адміністратор могтиме маніпулювати аудіотекою та змінювати загальну інформацію.</li>
+                    <li>Зареєстрований користувач матиме свою бібліотеку улюблених пісень, на окремій вкладці ФОРУМ пропонувати тематичні обговорення стосовно будь-якої музичної теми. ФОРУМ буде модеруватися адміністрацією : неприйнятні висловлювання будуть видалятись, користувачам приходитиме сповіщення про порушення ПРАВИЛ.</li>
+                    <li>ПРАВИЛА користування будуть можливі для перегляду кожному користувачеві та розміщені на на окремій сторінці, а також при реєстрації.</li>
+                </ol>
+            </div>
         </div>
 
     </section>
