--- a/zvit/theme.html
+++ b/zvit/theme.html
@@ -64,7 +64,20 @@
         </div>
 
         <div class="main_area">
-
+            <div style="
+            background-color: rgb(224, 146, 255);
+            font-size: 20px;
+            border: 3px solid black;
+            ">
+            <h1 style="text-decoration: underline;">ТЕМА:</h1>
+            <p>СТРУКТУРА HTML-ДОКУМЕНТА. ВИБІР ПРЕДМЕТНОГО ГАЛУЗІ.
+                РОБОТА З ПОСИЛАННЯМИ, ТАБЛИЦЯМИ, ЗОБРАЖЕННЯМИ, ФОРМАМИ в HTML-ДОКУМЕНТІ.</p>
+            <h1 style="text-decoration: underline;">МЕТА:</h1>
+            <p>придбати практичні навички роботи  з HTML-документом, таблицями,формами, зображеннями, посиланнями.
+                Створити шаблон звітного HTML-документом для відображення результатів роботи всіх лабораторних робіт.</p>
+            <h1 style="text-decoration: underline;">РОЗТАШУВАННЯ:</h1>
+            <p><a href="https://github.com/KurtC0bain/KPI_WEB" target="_blank">github.com/KurtC0bain/KPI_WEB</a></p>
+            </div>
         </div>
 
     </section>
