--- a/zvit/img.html
+++ b/zvit/img.html
@@ -14,7 +14,7 @@
         <div class="container">
 
             <div class="header_title">
-                <h1>ЗВІТИ  З ЛАБОРАТОРНИХ РОБІТ З ДИСЦИПЛІНИ «ІНТЕРНЕТ-ТЕХНОЛОГІЇ ТА ПРОЕКТУВАННЯ WEB-ЗАСТОСУВАНЬ»</h1>
+                <a style="text-decoration: none;" href="index.html"><h1>ЗВІТИ  З ЛАБОРАТОРНИХ РОБІТ З ДИСЦИПЛІНИ «ІНТЕРНЕТ-ТЕХНОЛОГІЇ ТА ПРОЕКТУВАННЯ WEB-ЗАСТОСУВАНЬ»</h1></a>
             </div>
 
             <div class="header_add">
@@ -23,7 +23,7 @@
 
             <div class="header_photo">
                 <div class="header_img">
-                    <img class="header_img" src="img/cs-love-avatar-1072.jpg" alt="">
+                    <img class="header_img" src="img/max.jpg" alt="">
                     <figcaption><a href="https://t.me/diehxec" class="links">Піщук Максим<br> Віталійович</a></figcaption>
                 </div>
                 <div class="header_img">
