--- a/zvit/index.html
+++ b/zvit/index.html
@@ -14,7 +14,7 @@
         <div class="container">
 
             <div class="header_title">
-                <h1>ЗВІТИ  З ЛАБОРАТОРНИХ РОБІТ З ДИСЦИПЛІНИ «ІНТЕРНЕТ-ТЕХНОЛОГІЇ ТА ПРОЕКТУВАННЯ WEB-ЗАСТОСУВАНЬ»</h1>
+                <a style="text-decoration: none;" href="index.html"><h1>ЗВІТИ  З ЛАБОРАТОРНИХ РОБІТ З ДИСЦИПЛІНИ «ІНТЕРНЕТ-ТЕХНОЛОГІЇ ТА ПРОЕКТУВАННЯ WEB-ЗАСТОСУВАНЬ»</h1></a>
             </div>
 
             <div class="header_add">
