--- a/zvit/theme.html
+++ b/zvit/theme.html
@@ -23,15 +23,15 @@
 
             <div class="header_photo">
                 <div class="header_img">
-                    <img class="header_img" src="img/max.jpg" alt="">
+                    <img class="header_img_1" src="img/max.jpg" alt="">
                     <figcaption><a href="https://t.me/diehxec" class="links">Піщук Максим<br> Віталійович</a></figcaption>
                 </div>
                 <div class="header_img">
-                    <img class="header_img" src="img/User 06.jpg" alt="">
+                    <img class="header_img_1" src="img/User 06.jpg" alt="">
                     <figcaption><a href="https://t.me/callmeplss" class="links">Мороз Владислав<br> Володимирович</a></figcaption>
                 </div>
                 <div class="header_img">
-                    <img class="header_img" src="img/user1.png" alt="">
+                    <img class="header_img_1" src="img/user1.png" alt="">
                     <figcaption><a href="https://t.me/TREON" class="links">Терещенко Богдан<br> Олександрович</a></figcaption>
                 </div>    
             </div>
