--- a/zvit/index.html
+++ b/zvit/index.html
@@ -31,7 +31,7 @@
                     <figcaption><a href="https://t.me/callmeplss" class="links">Мороз Владислав<br> Володимирович</a></figcaption>
                 </div>
                 <div class="header_img">
-                    <img class="header_img_1" src="img/img009.png" alt="">
+                    <img class="header_img_1" src="img/user1.png" alt="">
                     <figcaption><a href="https://t.me/TREON" class="links">Терещенко Богдан<br> Олександрович</a></figcaption>
                 </div>    
             </div>
