--- a/zvit/index.html
+++ b/zvit/index.html
@@ -7,7 +7,7 @@
     <title>Звітти з WEB</title>
     <script src="js/script.js"></script>
 </head>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/style.css ">
 
 <body>
     <header class="header">
@@ -48,6 +48,7 @@
             <button class="lab_button">Лабораторна робота №8</button>
             <button class="lab_button">Лабораторна робота №9</button>    
         </div>
+        <div></div>
     </header>
 
     <section class="main">
