--- a/zvit/forms.html
+++ b/zvit/forms.html
@@ -12,7 +12,6 @@
 <body>
     <header class="header">
         <div class="container">
-
             <div class="header_title">
                 <a style="text-decoration: none;" href="index.html"><h1>ЗВІТИ  З ЛАБОРАТОРНИХ РОБІТ З ДИСЦИПЛІНИ «ІНТЕРНЕТ-ТЕХНОЛОГІЇ ТА ПРОЕКТУВАННЯ WEB-ЗАСТОСУВАНЬ»</h1></a>
             </div>
@@ -31,7 +30,7 @@
                     <figcaption><a href="https://t.me/callmeplss" class="links">Мороз Владислав<br> Володимирович</a></figcaption>
                 </div>
                 <div class="header_img">
-                    <img class="header_img_1" src="img/user1.png" alt="">
+                    <img class="header_img_1" src="img/bohdan_avatar.jpg" alt="">
                     <figcaption><a href="https://t.me/TREON" class="links">Терещенко Богдан<br> Олександрович</a></figcaption>
                 </div>    
             </div>
