--- a/zvit/index.html
+++ b/zvit/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Звітти з WEB</title>
+    <title>Звіти з WEB</title>
     <script src="js/script.js"></script>
 </head>
 <link rel="stylesheet" href="css/style.css">
@@ -31,7 +31,7 @@
                     <figcaption><a href="https://t.me/callmeplss" class="links">Мороз Владислав<br> Володимирович</a></figcaption>
                 </div>
                 <div class="header_img">
-                    <img class="header_img_1" src="img/user1.png" alt="">
+                    <img class="header_img_1" src="img/bohdan_avatar.jpg" alt="">
                     <figcaption><a href="https://t.me/TREON" class="links">Терещенко Богдан<br> Олександрович</a></figcaption>
                 </div>    
             </div>
@@ -62,10 +62,12 @@
                 <li><div class="vertical_area"><a href="cons.html" class="links_l">Висновки</a></div></li>
             </ul>
         </div>
-
+        
         <div class="main_area">
 
         </div>
+
+
 
     </section>
     <hr>
