--- a/zvit/cons.html
+++ b/zvit/cons.html
@@ -66,6 +66,7 @@
         <div class="main_area">
             <div style="
             display: inline-block;
+            max-width: 1000px;
             background-color: rgb(224, 146, 255);
             border: 3px solid black;
             text-align: center;
