--- a/zvit/descr.html
+++ b/zvit/descr.html
@@ -65,6 +65,7 @@
 
         <div class="main_area">
             <div class="description" style="
+            max-width: 1000px;
             background-color: rgb(224, 146, 255);
             border: 3px solid black;
             ">
