--- a/zvit/theme.html
+++ b/zvit/theme.html
@@ -65,6 +65,7 @@
 
         <div class="main_area">
             <div style="
+            max-width: 1000px;
             background-color: rgb(224, 146, 255);
             font-size: 20px;
             border: 3px solid black;
