--- a/zvit/img.html
+++ b/zvit/img.html
@@ -65,15 +65,15 @@
 
         <div class="main_area">
             <div style="
+            max-width: 1000px;
             display: inline-block;
             background-color: rgb(224, 146, 255);
             border: 3px solid black;
             text-align: center;
             padding: 10px;
-            position: relative;
             ">
-                <img src="img/img_code.png" alt="" style="position: relative; bottom: 80px;">
-                <img src="img/img_css.png" alt="" style="width: 325px; height: 300px;">
+                <img src="img/img_code.png" alt="" style="bottom: 80px;">
+                <img src="img/img_css.png" alt="" style="width: 370px; height: 300px;">
             </div>
         </div>
         </div>
