--- a/zvit/index_2.html
+++ b/zvit/index_2.html
@@ -7,7 +7,7 @@
     <title>Звіти з WEB</title>
     <script src="js/script.js"></script>
 </head>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/style.css ">
 
 <body>
     <header class="header">
@@ -33,7 +33,7 @@
                 <div class="header_img">
                     <img class="header_img_1" src="img/bohdan_avatar.jpg" alt="">
                     <figcaption><a href="https://t.me/TREON" class="links">Терещенко Богдан<br> Олександрович</a></figcaption>
-                </div>    
+                </div>
             </div>
         </div>
         <hr>
@@ -41,31 +41,33 @@
             <button class="lab_button"><a href="index.html">Лабораторна робота №1</a></button>
             <button class="lab_button"><a href="index_2.html">Лабораторна робота №2</a></button>
             <button class="lab_button"><a href="index_3.html">Лабораторна робота №3</a></button>
-            <button class="lab_button">Лабораторна робота №4</button>
-            <button class="lab_button">Лабораторна робота №5</button>
-            <button class="lab_button">Лабораторна робота №6</button>
-            <button class="lab_button">Лабораторна робота №7</button>
-            <button class="lab_button">Лабораторна робота №8</button>
-            <button class="lab_button">Лабораторна робота №9</button>    
+            <button class="lab_button"><a>Лабораторна робота №4</a></button>
+            <button class="lab_button"><a>Лабораторна робота №5</a></button>
+            <button class="lab_button"><a>Лабораторна робота №6</a></button>
+            <button class="lab_button"><a>Лабораторна робота №7</a></button>
+            <button class="lab_button"><a>Лабораторна робота №8</a></button>
+            <button class="lab_button"><a>Лабораторна робота №9</a></button>    
         </div>
     </header>
 
     <section class="main">
         <div class="vertical">
             <ul class="list">
-                <li><div class="vertical_area"><a href="descr.html" class="links_l">Опис предметного середовища</a></div></li>
-                <li><div class="vertical_area"><a href="theme.html" class="links_l">Тема Мета Місце розташування</a></div></li>
-                <li><div class="vertical_area"><a href="struct.html" class="links_l">Структура документа</a></div></li>
-                <li><div class="vertical_area"><a href="table.html" class="links_l">HTML-код таблиць</a></div></li>
-                <li><div class="vertical_area"><a href="forms.html" class="links_l">HTML-код форми</a></div></li>
-                <li><div class="vertical_area"><a href="img.html" class="links_l">HTML-код зображення</a></div></li>
-                <li><div class="vertical_area"><a href="cons.html" class="links_l">Висновки</a></div></li>
+                <li><div class="vertical_area"><a href="list_2.html" class="links_l">Списки</a></div></li>
+                <li><div class="vertical_area"><a href="ident_2.html" class="links_l">Ідентифікатори</a></div></li>
+                <li><div class="vertical_area"><a href="tabs_2.html" class="links_l">Відступи</a></div></li>
+                <li><div class="vertical_area"><a href="flowing_2.html" class="links_l">Плаваючі елементи</a></div></li>
+                <li><div class="vertical_area"><a href="selector_tag_2.html" class="links_l">Селектор тегу і класу</a></div></li>
+                <li><div class="vertical_area"><a href="selector_other_2.html" class="links_l">Інші селектори</a></div></li>
+                <li><div class="vertical_area"><a href="selector_group_2.html" class="links_l">Групування селекторів</a></div></li>
             </ul>
         </div>
-
+        
         <div class="main_area">
 
         </div>
+
+
 
     </section>
     <hr>
@@ -75,4 +77,6 @@
         <p class="footer_text">Copyright 2021 © KPI</p>
     </footer>
 </body>
+
+
 </html>
