--- a/zvit/img.html
+++ b/zvit/img.html
@@ -38,9 +38,9 @@
         </div>
         <hr>
         <div class="head_buttons">
-            <button class="lab_button">Лабораторна робота №1</button>
-            <button class="lab_button">Лабораторна робота №2</button>
-            <button class="lab_button">Лабораторна робота №3</button>
+            <button class="lab_button"><a href="index.html">Лабораторна робота №1</a></button>
+            <button class="lab_button"><a href="index_2.html">Лабораторна робота №2</a></button>
+            <button class="lab_button"><a href="index_3.html">Лабораторна робота №3</a></button>
             <button class="lab_button">Лабораторна робота №4</button>
             <button class="lab_button">Лабораторна робота №5</button>
             <button class="lab_button">Лабораторна робота №6</button>
