--- a/zvit/selector_group_2.html
+++ b/zvit/selector_group_2.html
@@ -53,18 +53,25 @@
     <section class="main">
         <div class="vertical">
             <ul class="list">
-                <li><div class="vertical_area"><a href="descr.html" class="links_l">Опис предметного середовища</a></div></li>
-                <li><div class="vertical_area"><a href="theme.html" class="links_l">Тема Мета Місце розташування</a></div></li>
-                <li><div class="vertical_area"><a href="struct.html" class="links_l">Структура документа</a></div></li>
-                <li><div class="vertical_area"><a href="table.html" class="links_l">HTML-код таблиць</a></div></li>
-                <li><div class="vertical_area"><a href="forms.html" class="links_l">HTML-код форми</a></div></li>
-                <li><div class="vertical_area"><a href="img.html" class="links_l">HTML-код зображення</a></div></li>
-                <li><div class="vertical_area"><a href="cons.html" class="links_l">Висновки</a></div></li>
+                <li><div class="vertical_area"><a href="list_2.html" class="links_l">Списки</a></div></li>
+                <li><div class="vertical_area"><a href="ident_2.html" class="links_l">Ідентифікатори</a></div></li>
+                <li><div class="vertical_area"><a href="tabs_2.html" class="links_l">Відступи</a></div></li>
+                <li><div class="vertical_area"><a href="flowing_2.html" class="links_l">Плаваючі елементи</a></div></li>
+                <li><div class="vertical_area"><a href="selector_tag_2.html" class="links_l">Селектор тегу і класу</a></div></li>
+                <li><div class="vertical_area"><a href="selector_other_2.html" class="links_l">Інші селектори</a></div></li>
+                <li><div class="vertical_area"><a href="selector_group_2.html" class="links_l">Групування селекторів</a></div></li>
             </ul>
         </div>
         
         <div class="main_area">
-
+            <div style="width: 1000px;">
+                <h1>Групування селекторів</h1>
+                <p>Коли ви групуєте селектори CSS, ви застосовуєте однакові стилі до кількох різних елементів без повторення стилів у вашій таблиці стилів. Замість того, щоб мати два, три або більше правил CSS, які роблять одне і те ж (наприклад, встановіть колір чогось на червоний), ви використовуєте одне правило CSS, яке виконує те саме. Секрет цієї тактики підвищення ефективності – кома.</p>
+                <p>У цьому контексті кома означає “і”, тому цей селектор застосовується до всіх елементів абзацу та всіх елементів поділу. Якби кома відсутня, селектор замість цього застосовував би всі елементи абзацу, які є дочірніми елементами ділення. Це інший тип селектора, тому кома важлива. Ви можете згрупувати будь-яку форму селектора з будь-яким іншим селектором.</p>
+                <div>
+                    <img src="img/selector_group_css.png" alt="">
+                </div>
+            </div>
         </div>
 
 
