--- a/zvit/selector_other_2.html
+++ b/zvit/selector_other_2.html
@@ -53,18 +53,35 @@
     <section class="main">
         <div class="vertical">
             <ul class="list">
-                <li><div class="vertical_area"><a href="descr.html" class="links_l">Опис предметного середовища</a></div></li>
-                <li><div class="vertical_area"><a href="theme.html" class="links_l">Тема Мета Місце розташування</a></div></li>
-                <li><div class="vertical_area"><a href="struct.html" class="links_l">Структура документа</a></div></li>
-                <li><div class="vertical_area"><a href="table.html" class="links_l">HTML-код таблиць</a></div></li>
-                <li><div class="vertical_area"><a href="forms.html" class="links_l">HTML-код форми</a></div></li>
-                <li><div class="vertical_area"><a href="img.html" class="links_l">HTML-код зображення</a></div></li>
-                <li><div class="vertical_area"><a href="cons.html" class="links_l">Висновки</a></div></li>
+                <li><div class="vertical_area"><a href="list_2.html" class="links_l">Списки</a></div></li>
+                <li><div class="vertical_area"><a href="ident_2.html" class="links_l">Ідентифікатори</a></div></li>
+                <li><div class="vertical_area"><a href="tabs_2.html" class="links_l">Відступи</a></div></li>
+                <li><div class="vertical_area"><a href="flowing_2.html" class="links_l">Плаваючі елементи</a></div></li>
+                <li><div class="vertical_area"><a href="selector_tag_2.html" class="links_l">Селектор тегу і класу</a></div></li>
+                <li><div class="vertical_area"><a href="selector_other_2.html" class="links_l">Інші селектори</a></div></li>
+                <li><div class="vertical_area"><a href="selector_group_2.html" class="links_l">Групування селекторів</a></div></li>
             </ul>
         </div>
         
         <div class="main_area">
-
+            <div>   
+                <h1>Інші селектори</h1>
+                <h3>Універсальний селектор</h3>
+                <p>Вибирає всі елементи. За бажанням, він може бути обмежений певним простором імен або ставитися до всього простору імен.<br>
+                    Синтаксис: * ns | * * | *<br>
+                    Приклад: * буде відповідати всім елементам на сторінці.</p>
+                <div>
+                    <img src="img/selector_universal_css.png" alt="">
+                </div>
+                <h3>Селектор по типу</h3>
+                <p>Вибирає всі елементи. За бажанням, він може бути обмежений певним простором імен або ставитися до всього простору імен. <br>
+                    Синтаксис: * ns | * * | * <br>
+                    Приклад: * буде відповідати всім елементам на сторінці.</p>
+                <div>
+                    <img src="img/selector_type_css.png" alt="">
+                </div>
+    
+            </div>
         </div>
 
 
