--- a/zvit/selector_tag_2.html
+++ b/zvit/selector_tag_2.html
@@ -53,18 +53,30 @@
     <section class="main">
         <div class="vertical">
             <ul class="list">
-                <li><div class="vertical_area"><a href="descr.html" class="links_l">Опис предметного середовища</a></div></li>
-                <li><div class="vertical_area"><a href="theme.html" class="links_l">Тема Мета Місце розташування</a></div></li>
-                <li><div class="vertical_area"><a href="struct.html" class="links_l">Структура документа</a></div></li>
-                <li><div class="vertical_area"><a href="table.html" class="links_l">HTML-код таблиць</a></div></li>
-                <li><div class="vertical_area"><a href="forms.html" class="links_l">HTML-код форми</a></div></li>
-                <li><div class="vertical_area"><a href="img.html" class="links_l">HTML-код зображення</a></div></li>
-                <li><div class="vertical_area"><a href="cons.html" class="links_l">Висновки</a></div></li>
+                <li><div class="vertical_area"><a href="list_2.html" class="links_l">Списки</a></div></li>
+                <li><div class="vertical_area"><a href="ident_2.html" class="links_l">Ідентифікатори</a></div></li>
+                <li><div class="vertical_area"><a href="tabs_2.html" class="links_l">Відступи</a></div></li>
+                <li><div class="vertical_area"><a href="flowing_2.html" class="links_l">Плаваючі елементи</a></div></li>
+                <li><div class="vertical_area"><a href="selector_tag_2.html" class="links_l">Селектор тегу і класу</a></div></li>
+                <li><div class="vertical_area"><a href="selector_other_2.html" class="links_l">Інші селектори</a></div></li>
+                <li><div class="vertical_area"><a href="selector_group_2.html" class="links_l">Групування селекторів</a></div></li>
             </ul>
         </div>
         
         <div class="main_area">
+            <div style="width: 1000px;">
+                <h1>Що таке селектори класу і тегу?</h1>
+                <p>Селектори класу використовуються для визначення стилів для кількох елементів одного типу, розміщених у різних частинах або на різних сторінках веб-сайту. Для створення заголовка класу headline необхідно додати атрибут class з відповідним значенням в відкриваючий тег h1. Далі необхідно задати стиль для зазначеного класу. Даний стиль оформлення можна застосувати і для інших елементів.</p>
+                    <div>
+                        <img src="img/selector_class_code.png" alt="">
+                    </div>
+                <p>Селектори ідентифікатора використовуються для привласнення стилю одному конкретному елементу. Ідентифікатор id елемента можна використовувати в документі лише один раз, оскільки він виділяє унікальний елемент.
+                Імена класів можуть складатися з латинських символів, цифр і знаків - і _. Ім'я класу має починатися з літери.</p>
+                <div>
+                    <img src="img/selector_tag_code.png" alt="">
+                </div>
 
+            </div>
         </div>
 
 
