--- a/zvit/tabs_2.html
+++ b/zvit/tabs_2.html
@@ -53,18 +53,26 @@
     <section class="main">
         <div class="vertical">
             <ul class="list">
-                <li><div class="vertical_area"><a href="descr.html" class="links_l">Опис предметного середовища</a></div></li>
-                <li><div class="vertical_area"><a href="theme.html" class="links_l">Тема Мета Місце розташування</a></div></li>
-                <li><div class="vertical_area"><a href="struct.html" class="links_l">Структура документа</a></div></li>
-                <li><div class="vertical_area"><a href="table.html" class="links_l">HTML-код таблиць</a></div></li>
-                <li><div class="vertical_area"><a href="forms.html" class="links_l">HTML-код форми</a></div></li>
-                <li><div class="vertical_area"><a href="img.html" class="links_l">HTML-код зображення</a></div></li>
-                <li><div class="vertical_area"><a href="cons.html" class="links_l">Висновки</a></div></li>
+                <li><div class="vertical_area"><a href="list_2.html" class="links_l">Списки</a></div></li>
+                <li><div class="vertical_area"><a href="ident_2.html" class="links_l">Ідентифікатори</a></div></li>
+                <li><div class="vertical_area"><a href="tabs_2.html" class="links_l">Відступи</a></div></li>
+                <li><div class="vertical_area"><a href="flowing_2.html" class="links_l">Плаваючі елементи</a></div></li>
+                <li><div class="vertical_area"><a href="selector_tag_2.html" class="links_l">Селектор тегу і класу</a></div></li>
+                <li><div class="vertical_area"><a href="selector_other_2.html" class="links_l">Інші селектори</a></div></li>
+                <li><div class="vertical_area"><a href="selector_group_2.html" class="links_l">Групування селекторів</a></div></li>
             </ul>
         </div>
         
-        <div class="main_area">
-
+        <div class="main_area" style="display: flex;">
+            <div class="tabs_main" style="width: 800px;">
+                <h1>Що таке відступи?</h1>
+                <p>До абзацу (тег p) і заголовка (тег h1) автоматично додається верхній і нижній відступи, які в сумі й дають велику відстань між заголовком і текстом. Щоб зменшити величину відступу треба явно додати властивість margin-bottom до селектору h1. Причому можна встановити позитивне, нульове або від'ємне значення. Таким способом легко задавати бажане значення відступу.</p>
+                <p>Коли потрібно встановити абзацний відступ, краще всього використовувати стильове властивість text-indent. Його значення визначає наскільки зрушити текст першої рядки праворуч від вихідного положення. Ширина текстового блоку при цьому не змінюється і залишається початково заданої. Величину відступу можна вказувати в пікселях, відсотках або інших доступних одиницях.</p>
+                <div>
+                    <img src="img/tab_code.png" alt="" style="width: 700px;">
+                </div>
+    
+            </div>
         </div>
 
 
